--- a/wang/course/Assignment 4.ipynb
+++ b/wang/course/Assignment 4.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -49,8 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use this dictionary to map state names to two letter acronyms\n",
@@ -59,9 +61,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>RegionName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Auburn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Florence</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Jacksonville</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Livingston</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>Montevallo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  State     RegionName\n",
+       "0    AL        Auburn \n",
+       "1    AL      Florence \n",
+       "2    AL  Jacksonville \n",
+       "3    AL    Livingston \n",
+       "4    AL    Montevallo "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_list_of_university_towns():\n",
     "    '''Returns a DataFrame of towns and the states they are in from the \n",
@@ -74,14 +145,31 @@
     "    1. For \"State\", removing characters from \"[\" to the end.\n",
     "    2. For \"RegionName\", when applicable, removing every character from \" (\" to the end.\n",
     "    3. Depending on how you read the data, you may need to remove newline character '\\n'. '''\n",
-    "    \n",
-    "    return \"ANSWER\""
+    "    data = []\n",
+    "    fp = open(\"university_towns.txt\", \"r\")\n",
+    "    state = \"\"\n",
+    "    state_dict = {v:k for k, v in states.items()}\n",
+    "    for line in fp:\n",
+    "        line = line.strip()\n",
+    "        if line.endswith(\"[edit]\"):\n",
+    "            state = line.replace(\"[edit]\", \"\")\n",
+    "            state = state_dict[state]\n",
+    "        else:\n",
+    "            region = line.split(\"(\")[0]\n",
+    "            data.append([state, region])\n",
+    "    towns = pd.DataFrame(data, columns=[\"State\", \"RegionName\"])\n",
+    "    return towns\n",
+    "\n",
+    "towns = get_list_of_university_towns()\n",
+    "towns.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_recession_start():\n",
@@ -94,7 +182,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_recession_end():\n",
@@ -107,7 +197,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_recession_bottom():\n",
@@ -120,7 +212,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def convert_housing_data_to_quarters():\n",
@@ -141,7 +235,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def run_ttest():\n",
