--- a/words/Assignment_2/test/sudoku_3_marked1.tex
+++ b/words/Assignment_2/test/sudoku_3_marked1.tex
@@ -19,47 +19,47 @@
 % Line 1
 \N{2}{3 4}{5}{}{} & \N{2}{4}{5}{}{} & \N{}{}{}{}{1} &
 \N{}{}{}{}{9} & \N{2}{3}{}{}{} & \N{}{}{}{}{7} &
-\N{}{3}{5}{}{} & \N{}{}{5}{}{} & \N{}{}{}{}{8} \\ \hline
+\N{}{}{5 6}{}{} & \N{}{4}{5 6}{}{} & \N{}{}{}{}{8} \\ \hline
 
 % Line 2
 \N{}{}{}{}{6} & \N{2}{4}{}{9}{} & \N{2}{}{}{9}{} &
 \N{}{}{}{}{1} & \N{}{}{}{}{8} & \N{}{}{}{}{5} &
-\N{}{}{}{}{7} & \N{}{}{}{}{3} & \N{2}{}{}{}{} \\ \hline
+\N{}{}{}{}{7} & \N{}{}{}{}{3} & \N{2}{4}{}{9}{} \\ \hline
 
 % Line 3
 \N{2}{3}{5}{8 9}{} & \N{2}{}{5}{8 9}{} & \N{}{}{}{}{7} &
-\N{}{}{}{}{4} & \N{}{}{}{}{6} & \N{2}{3}{}{8}{} &
-\N{}{}{}{}{1} & \N{}{}{5}{}{} & \N{2}{3}{5}{}{} \\ \hline\hline
+\N{}{}{}{}{4} & \N{}{}{}{}{6} & \N{2}{3}{}{}{} &
+\N{}{}{}{}{1} & \N{}{}{5}{9}{} & \N{2}{}{5}{9}{} \\ \hline\hline
 
 % Line 4
 \N{1 2}{}{5}{8}{} & \N{}{}{}{}{3} & \N{}{}{}{}{4} &
-\N{2}{}{6}{}{} & \N{}{}{}{}{9} & \N{2}{}{6}{8}{} &
-\N{}{}{5}{}{} & \N{}{}{5}{}{} & \N{2}{}{5}{}{} \\ \hline
+\N{2}{}{6}{7}{} & \N{}{}{}{}{9} & \N{2}{}{6}{8}{} &
+\N{}{}{5 6}{8}{} & \N{1}{}{5 6}{7 8}{} & \N{1}{}{5 6}{}{} \\ \hline
 
 % Line 5
-\N{1 2}{}{}{8 9}{} & \N{2}{}{}{8 9}{} & \N{2}{}{}{8 9}{} &
-\N{}{}{}{}{5} & \N{2}{}{}{}{} & \N{}{}{}{}{4} &
-\N{}{3}{}{}{} & \N{}{}{}{}{} & \N{2}{3}{}{}{} \\ \hline
+\N{1 2}{}{}{8 9}{} & \N{2}{}{6}{7 8 9}{} & \N{2}{}{6}{8 9}{} &
+\N{}{}{}{}{5} & \N{2}{3}{}{}{} & \N{}{}{}{}{4} &
+\N{}{3}{6}{8}{} & \N{1}{}{6}{7 8 9}{} & \N{1}{3}{6}{9}{} \\ \hline
 
 % Line 6
-\N{}{}{5}{8 9}{} & \N{}{}{5}{8 9}{} & \N{}{}{}{8 9}{} &
-\N{}{}{6}{}{} & \N{}{}{}{}{1} & \N{}{}{6}{8}{} &
-\N{}{}{}{}{4} & \N{}{}{}{}{2} & \N{}{3}{5}{}{} \\ \hline\hline
+\N{}{}{5}{8 9}{} & \N{}{}{5 6}{7 8 9}{} & \N{}{}{6}{8 9}{} &
+\N{}{3}{6}{7}{} & \N{}{}{}{}{1} & \N{}{3}{6}{8}{} &
+\N{}{}{}{}{4} & \N{}{}{}{}{2} & \N{}{3}{5 6}{9}{} \\ \hline\hline
 
 % Line 7
-\N{2}{}{}{8}{} & \N{2}{}{6}{8}{} & \N{}{}{}{}{5} &
-\N{2}{}{6}{}{} & \N{}{}{}{}{7} & \N{}{}{}{}{1} &
-\N{}{}{}{}{9} & \N{}{}{}{8}{} & \N{2}{3}{}{}{} \\ \hline
+\N{2}{3 4}{}{8}{} & \N{2}{4}{6}{8}{} & \N{}{}{}{}{5} &
+\N{2}{3}{6}{}{} & \N{}{}{}{}{7} & \N{}{}{}{}{1} &
+\N{}{}{}{}{9} & \N{}{4}{6}{8}{} & \N{}{3 4}{6}{}{} \\ \hline
 
 % Line 8
-\N{2}{}{5}{9}{} & \N{}{}{}{}{1} & \N{2}{}{6}{9}{} &
-\N{}{}{}{}{8} & \N{}{}{}{}{4} & \N{2}{}{6}{}{} &
-\N{}{3}{}{}{} & \N{}{}{}{}{} & \N{}{}{}{}{7} \\ \hline
+\N{2}{3}{}{9}{} & \N{}{}{}{}{1} & \N{2}{3}{6}{9}{} &
+\N{}{}{}{}{8} & \N{}{}{}{}{4} & \N{2}{3}{6}{}{} &
+\N{}{3}{5 6}{}{} & \N{}{}{5 6}{}{} & \N{}{}{}{}{7} \\ \hline
 
 % Line 9
-\N{}{}{}{}{7} & \N{}{}{6}{8}{} & \N{}{}{6}{8}{} &
-\N{}{}{6}{}{} & \N{}{}{}{}{5} & \N{}{}{}{}{9} &
-\N{}{}{}{}{2} & \N{1}{}{}{8}{} & \N{1}{3}{}{}{} \\ \hline\hline
+\N{}{}{}{}{7} & \N{}{4}{6}{8}{} & \N{}{3}{6}{8}{} &
+\N{}{3}{6}{}{} & \N{}{}{}{}{5} & \N{}{}{}{}{9} &
+\N{}{}{}{}{2} & \N{1}{4}{6}{8}{} & \N{1}{3 4}{6}{}{} \\ \hline\hline
 \end{tabular}
 \end{center}
 
