--- a/words/Assignment_2/test/sudoku_5_forced1.tex
+++ b/words/Assignment_2/test/sudoku_5_forced1.tex
@@ -17,13 +17,13 @@
 \begin{center}
 \begin{tabular}{||@{}c@{}|@{}c@{}|@{}c@{}||@{}c@{}|@{}c@{}|@{}c@{}||@{}c@{}|@{}c@{}|@{}c@{}||}\hline\hline
 % Line 1
-\N{}{}{}{}{} & \N{}{}{}{}{9} & \N{}{}{}{}{} &
+\N{}{}{}{}{2} & \N{}{}{}{}{9} & \N{}{}{}{}{5} &
 \N{}{}{}{}{7} & \N{}{}{}{}{} & \N{}{}{}{}{} &
 \N{}{}{}{}{8} & \N{}{}{}{}{6} & \N{}{}{}{}{} \\ \hline
 
 % Line 2
 \N{}{}{}{}{} & \N{}{}{}{}{3} & \N{}{}{}{}{1} &
-\N{}{}{}{}{} & \N{}{}{}{}{} & \N{}{}{}{}{5} &
+\N{}{}{}{}{8} & \N{}{}{}{}{6} & \N{}{}{}{}{5} &
 \N{}{}{}{}{} & \N{}{}{}{}{2} & \N{}{}{}{}{} \\ \hline
 
 % Line 3
@@ -38,17 +38,17 @@
 
 % Line 5
 \N{}{}{}{}{} & \N{}{}{}{}{} & \N{}{}{}{}{} &
-\N{}{}{}{}{3} & \N{}{}{}{}{} & \N{}{}{}{}{7} &
+\N{}{}{}{}{3} & \N{}{}{}{}{8} & \N{}{}{}{}{7} &
 \N{}{}{}{}{} & \N{}{}{}{}{} & \N{}{}{}{}{} \\ \hline
 
 % Line 6
 \N{}{}{}{}{5} & \N{}{}{}{}{} & \N{}{}{}{}{} &
-\N{}{}{}{}{} & \N{}{}{}{}{1} & \N{}{}{}{}{} &
+\N{}{}{}{}{} & \N{}{}{}{}{1} & \N{}{}{}{}{6} &
 \N{}{}{}{}{7} & \N{}{}{}{}{} & \N{}{}{}{}{} \\ \hline\hline
 
 % Line 7
 \N{}{}{}{}{} & \N{}{}{}{}{} & \N{}{}{}{}{} &
-\N{}{}{}{}{} & \N{}{}{}{}{} & \N{}{}{}{}{} &
+\N{}{}{}{}{5} & \N{}{}{}{}{} & \N{}{}{}{}{} &
 \N{}{}{}{}{1} & \N{}{}{}{}{} & \N{}{}{}{}{9} \\ \hline
 
 % Line 8
@@ -59,7 +59,7 @@
 % Line 9
 \N{}{}{}{}{} & \N{}{}{}{}{5} & \N{}{}{}{}{4} &
 \N{}{}{}{}{} & \N{}{}{}{}{} & \N{}{}{}{}{8} &
-\N{}{}{}{}{} & \N{}{}{}{}{7} & \N{}{}{}{}{} \\ \hline\hline
+\N{}{}{}{}{6} & \N{}{}{}{}{7} & \N{}{}{}{}{2} \\ \hline\hline
 \end{tabular}
 \end{center}
 
