--- a/words/Assignment_2/test/sudoku_4_marked1.tex
+++ b/words/Assignment_2/test/sudoku_4_marked1.tex
@@ -17,49 +17,49 @@
 \begin{center}
 \begin{tabular}{||@{}c@{}|@{}c@{}|@{}c@{}||@{}c@{}|@{}c@{}|@{}c@{}||@{}c@{}|@{}c@{}|@{}c@{}||}\hline\hline
 % Line 1
-\N{2}{4}{6}{7 8}{} & \N{}{}{}{}{3} & \N{}{}{}{}{9} &
-\N{}{}{}{}{5} & \N{2}{4}{6}{7}{} & \N{2}{4}{6}{7}{} &
-\N{1}{}{6}{}{} & \N{1 2}{}{}{8}{} & \N{1 2}{}{6}{}{} \\ \hline
+\N{}{}{}{}{4} & \N{}{}{}{}{3} & \N{}{}{}{}{9} &
+\N{}{}{}{}{5} & \N{}{}{}{}{7} & \N{}{}{}{}{6} &
+\N{}{}{}{}{1} & \N{}{}{}{}{8} & \N{}{}{}{}{2} \\ \hline
 
 % Line 2
-\N{2}{4}{5 6}{}{} & \N{2}{4}{5 6}{}{} & \N{}{}{}{}{1} &
-\N{}{}{}{}{8} & \N{2}{3 4}{6}{}{} & \N{}{}{}{}{9} &
-\N{}{3}{5 6}{}{} & \N{}{}{}{}{7} & \N{2}{}{6}{}{} \\ \hline
+\N{}{}{}{}{5} & \N{}{}{}{}{5} & \N{}{}{}{}{1} &
+\N{}{}{}{}{8} & \N{}{}{}{}{4} & \N{}{}{}{}{9} &
+\N{}{}{}{}{3} & \N{}{}{}{}{7} & \N{}{}{}{}{6} \\ \hline
 
 % Line 3
-\N{2}{}{5 6}{7 8}{} & \N{2}{}{5 6}{7 8}{} & \N{2}{}{5}{8}{} &
-\N{2}{3}{6}{}{} & \N{}{}{}{}{1} & \N{2}{3}{6}{7}{} &
-\N{}{}{}{}{9} & \N{2}{3}{5}{8}{} & \N{}{}{}{}{4} \\ \hline\hline
+\N{}{}{}{}{7} & \N{}{}{}{}{6} & \N{}{}{}{}{8} &
+\N{}{}{}{}{2} & \N{}{}{}{}{1} & \N{}{}{}{}{3} &
+\N{}{}{}{}{9} & \N{}{}{}{}{5} & \N{}{}{}{}{4} \\ \hline\hline
 
 % Line 4
-\N{}{}{}{}{1} & \N{2}{}{5 6}{8 9}{} & \N{2}{}{5}{8}{} &
-\N{}{}{}{}{4} & \N{2}{}{5 6}{7 8}{} & \N{2}{}{5 6}{7}{} &
-\N{}{}{5}{7}{} & \N{2}{}{5}{9}{} & \N{}{}{}{}{3} \\ \hline
+\N{}{}{}{}{1} & \N{}{}{}{}{9} & \N{}{}{}{}{2} &
+\N{}{}{}{}{4} & \N{}{}{}{}{8} & \N{}{}{}{}{7} &
+\N{}{}{}{}{5} & \N{}{}{}{}{2} & \N{}{}{}{}{3} \\ \hline
 
 % Line 5
-\N{2}{3 4}{5 6}{8 9}{} & \N{2}{4}{5 6}{8 9}{} & \N{2}{3 4}{5}{8}{} &
-\N{1 2}{3}{6}{9}{} & \N{2}{3}{5 6}{7 8}{} & \N{2}{3}{5 6}{7}{} &
-\N{1}{4}{5}{7}{} & \N{1 2}{4}{5}{9}{} & \N{1 2}{}{}{7 9}{} \\ \hline
+\N{}{}{}{}{6} & \N{}{}{}{}{8} & \N{}{}{}{}{5} &
+\N{}{}{}{}{1} & \N{}{}{}{}{} & \N{}{}{}{}{2} &
+\N{}{}{}{}{4} & \N{}{}{}{}{\cancel{9}} & \N{}{}{}{}{7} \\ \hline
 
 % Line 6
-\N{2}{3 4}{5}{9}{} & \N{2}{4}{5}{9}{} & \N{}{}{}{}{7} &
-\N{1 2}{3}{}{9}{} & \N{2}{3}{5}{}{} & \N{2}{3}{5}{}{} &
-\N{}{}{}{}{8} & \N{}{}{}{}{6} & \N{1 2}{}{}{9}{} \\ \hline\hline
+\N{}{}{}{}{3} & \N{}{}{}{}{4} & \N{}{}{}{}{7} &
+\N{}{}{}{}{9} & \N{}{}{}{}{2} & \N{}{}{}{}{5} &
+\N{}{}{}{}{8} & \N{}{}{}{}{6} & \N{}{}{}{}{1} \\ \hline\hline
 
 % Line 7
-\N{}{3 4}{5}{9}{} & \N{}{4}{5}{9}{} & \N{}{}{}{}{6} &
-\N{}{}{}{}{7} & \N{}{3 4}{5}{}{} & \N{}{}{}{}{8} &
-\N{}{}{}{}{2} & \N{1}{3 4}{}{9}{} & \N{1}{}{}{9}{} \\ \hline
+\N{}{}{}{}{5} & \N{}{}{}{}{5} & \N{}{}{}{}{6} &
+\N{}{}{}{}{7} & \N{}{}{}{}{3} & \N{}{}{}{}{8} &
+\N{}{}{}{}{2} & \N{}{}{}{}{1} & \N{}{}{}{}{9} \\ \hline
 
 % Line 8
-\N{2}{3 4}{}{7 8}{} & \N{}{}{}{}{1} & \N{2}{3 4}{}{8}{} &
-\N{2}{3}{6}{}{} & \N{}{}{}{}{9} & \N{2}{3 4}{6}{}{} &
-\N{}{3 4}{6}{7}{} & \N{}{3 4}{}{}{} & \N{}{}{}{}{5} \\ \hline
+\N{}{}{}{}{8} & \N{}{}{}{}{1} & \N{}{}{}{}{3} &
+\N{}{}{}{}{\cancel{2}} & \N{}{}{}{}{9} & \N{}{}{}{}{4} &
+\N{}{}{}{}{7} & \N{}{}{}{}{3} & \N{}{}{}{}{5} \\ \hline
 
 % Line 9
-\N{2}{3 4}{5}{7 9}{} & \N{2}{4}{5}{7 9}{} & \N{2}{3 4}{5}{}{} &
-\N{2}{3}{6}{}{} & \N{2}{3 4}{5 6}{}{} & \N{}{}{}{}{1} &
-\N{}{3 4}{6}{7}{} & \N{}{3 4}{}{9}{} & \N{}{}{}{}{8} \\ \hline\hline
+\N{}{}{}{}{9} & \N{}{}{}{}{2} & \N{}{}{}{}{4} &
+\N{}{3}{6}{}{} & \N{}{}{}{}{5} & \N{}{}{}{}{1} &
+\N{}{}{}{}{6} & \N{}{}{}{}{\cancel{4}} & \N{}{}{}{}{8} \\ \hline\hline
 \end{tabular}
 \end{center}
 
